2018-09-13  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'health_chk_fix'

	formatted ESOS Community license file to fit better in scrolling window widget; don't generate a default iSCSI initiator name file during build; include the correct license file in pkg_dist; rc.iscsid: generate a unique iSCSI initiator name file in start() if one doesn't already exist; decreased size (columns) of EULA scrolling window widget in TUI; fixed screen refresh issue in TUI for Community edition; added a note to the EULA scrolling window title line informing user to scroll down

2018-08-27  Marc A. Smith  <marc.smith@parodyne.com>

	added the 'dosfstools' package (resolves GH issue #215); removed un-needed line in Windows installer script (install.vbs)

2018-08-25  Marc A. Smith  <marc.smith@parodyne.com>

	health_chk.sh: 'JBOD' is an acceptable PD state for PERC RAID controllers (issue #219)

2018-08-16  Marc A. Smith  <marc.smith@parodyne.com>

	Merge branch 'rbd_blk_fix' into 1.x.x

	Merge branch 'prof_ed_prep'

2018-08-15  Marc A. Smith  <marc.smith@parodyne.com>

	fixed bug in getUsableBlockDevs() that is visible when Ceph RBD devices exist on a ESOS system

2018-08-13  Marc A. Smith  <marc.smith@parodyne.com>

	updated the "win_binaries" package to only include Windows tools that are now required; removed support for inlining RAID CLI tools from the install.sh and install.vbs installer scripts

2018-08-12  Marc A. Smith  <marc.smith@parodyne.com>

	added the 'raid_tools.py' script to handle installing propietary RAID CLI tools from the shell

2018-08-09  Marc A. Smith  <marc.smith@parodyne.com>

	web_ui.chroot: include a file in /etc/sudoers.d/ for the web UI stuff; rc.rpcagent: fixed typo in start(); added the 'install_lic.sh' script to assist web UI installing a new license

2018-08-08  Marc A. Smith  <marc.smith@parodyne.com>

	fixed typo in enable-commercial block of Makefile; fixed new image file name path in install.sh script
